# sfxr-web

./: Cargo.toml  README.md  index.html
docs/: index.html  sfxr_web.min.wasm  sfxr_web.wasm
src/: lib.rs
